<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E3F2FD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/peliculaDetallesCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tituloPeliculaDetalleTextView"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:paddingHorizontal="10dp"
                        android:text="@string/titulo_pelicula"
                        app:layout_constraintStart_toEndOf="@id/cartelPeliculaDetalleImageView"
                        app:layout_constraintTop_toTopOf="@id/cartelPeliculaDetalleImageView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textoPeliculaTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:ems="10"
                        android:paddingHorizontal="10dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/tituloPeliculaDetalleTextView"
                        app:layout_constraintStart_toEndOf="@id/tituloPeliculaDetalleTextView"
                        app:layout_constraintTop_toTopOf="@id/tituloPeliculaDetalleTextView"
                        tools:text="Encanto" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/cartelPeliculaDetalleImageView"
                        android:layout_width="90dp"
                        android:layout_height="130dp"
                        android:layout_margin="@dimen/margen_normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_launcher_background" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tituloIdiomaDetalleTextView"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:paddingHorizontal="10dp"
                        android:text="@string/titulo_idioma"
                        app:layout_constraintStart_toEndOf="@id/cartelPeliculaDetalleImageView"
                        app:layout_constraintTop_toBottomOf="@id/tituloPeliculaDetalleTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textoIdiomaDetalleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingHorizontal="10dp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="@id/tituloIdiomaDetalleTextView"
                        app:layout_constraintStart_toEndOf="@id/tituloIdiomaDetalleTextView"
                        app:layout_constraintTop_toTopOf="@id/tituloIdiomaDetalleTextView"
                        tools:text="Español" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tituloVotacionDetalleTextView"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:paddingHorizontal="10dp"
                        android:text="@string/titulo_votacion"
                        app:layout_constraintStart_toEndOf="@id/cartelPeliculaDetalleImageView"
                        app:layout_constraintTop_toBottomOf="@id/tituloIdiomaDetalleTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textoVotacionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingHorizontal="10dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/tituloVotacionDetalleTextView"
                        app:layout_constraintStart_toEndOf="@id/tituloVotacionDetalleTextView"
                        app:layout_constraintTop_toTopOf="@id/tituloVotacionDetalleTextView"
                        tools:text="8.7" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/peliculaInformacionDetallesCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/peliculaDetallesCardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tituloFechaLanzamientoTextView"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="2dp"
                        android:text="@string/fecha_de_lanzamiento"
                        app:layout_constraintBottom_toTopOf="@id/tituloSipnosisTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textoFechaLanzamientoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:layout_constraintBottom_toBottomOf="@id/tituloFechaLanzamientoTextView"
                        app:layout_constraintStart_toEndOf="@id/tituloFechaLanzamientoTextView"
                        app:layout_constraintTop_toTopOf="@id/tituloFechaLanzamientoTextView"
                        tools:text="22/05/22" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tituloSipnosisTextView"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/titulo_sipnosis"
                        app:layout_constraintBottom_toTopOf="@id/textoSipnosisTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tituloFechaLanzamientoTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textoSipnosisTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="12"
                        android:padding="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tituloSipnosisTextView"
                        tools:text="Cuenta la historia de los Madrigal, una familia extraordinaria que vive escondida en las montañas de Colombia, en una casa mágica,en un pueblo vibrante, en un lugar maravilloso conocido como un Encanto." />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>